--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<title>Portfolio</title>
 </head>
 <body>
-  <p>Hello, World!</p>
+  <p>레시피 도우미</p>
+	<p>team 14</p>
+	<p>김영준, 김훈규, 백광익</p>
+	<p>레시피를 검색하여 레시피의 정보를 알 수 있는 프로그램</p>
 </body>
 </html>
